--- a/truespeak/static/truespeak.css
+++ b/truespeak/static/truespeak.css
@@ -193,10 +193,7 @@ margin-bottom: 110px;
 }
 
 h1.settings-header {
-    font-size:50px;
-}
-.settings-bottom {
-    padding-left:45px;
+    font-size:40px;
 }
 
 .settings-save {
@@ -241,4 +238,8 @@ padding-right: 0px;
     margin-right:auto;
     margin-top:10%;
     width:200px;
+}
+
+.form-group {
+    margin-top:-15px;
 }
