--- a/truespeak/static/home.css
+++ b/truespeak/static/home.css
@@ -3,10 +3,10 @@
 }
 
 .snake-icon {
-    width: 71px;
+  width: 90px;
     float: left;
-    margin-top: 17px;
-    margin-left: 28px;
+    margin-top: -6px;
+    margin-left: 49px;
 }
 
 .snake-img {
@@ -26,13 +26,14 @@
     float: left;
     margin-top: 20px;
     margin-bottom: 5px;
-    width: 87%;
+    width: 100%;
 }
 
 .chrome-icon {
     width: 73px;
     float: right;
     margin-top: 13px;
+    display:none;
 }
 
 /* Custom container */
