--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -57,14 +57,14 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {% if not user.is_authenticated %}
-                    <li {% if request.path == "/register/" %}class="active"{% endif %}><a href="/register/">Register</a></li>
+                    <li class="{% if request.path == "/register/" %}active{% endif %} pt_extension_installed" style="display:none;"><a href="/register/">Register</a></li>
                 {% else %}
                     <li {% if request.path == "/settings/" %}class="active"{% endif %}><a href="/settings/">Settings</a></li>
                 {% endif %}
                 <li  {% if request.path == "/about/" %}class="active"{% endif %}><a href="/about/">About</a></li>
                 <li  {% if request.path == "/contact/" %}class="active"{% endif %}><a href="/contact/">Contact</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right pt_extension_installed">
                 {% if user.is_authenticated %}
                     <li class="already-registered"> you are logged in as <span class="who-are-you">{{ user.username }}</span> </li>
                     <a href="/logout/" class="btn btn-small btn-success sign-in-button parseltongue_logout">logout</a>
