--- a/truespeak/static/truespeak.css
+++ b/truespeak/static/truespeak.css
@@ -38,7 +38,7 @@
 }
 
 .over-sound-of-music {
-    position: absolute;
+    /*position: absolute;*/
     padding-right: 125px;
 }
 
@@ -76,8 +76,10 @@ label {
     z-index: -1;
     width: 549px;
     float: right;
-    left: 462px;
-    top: 122px;
+    /*left: 462px;*/
+    /*top: 122px;*/
+    left: 47%;
+    top: 159px;
 }
 
 .already-registered {
@@ -90,7 +92,7 @@ a.sign-in-button {
     color:white;
     float: left;
     margin-top: 8px;
-    margin-right:100px;
+    margin-right:10px;
 }
 
 .pt-logo {
@@ -132,10 +134,14 @@ a.sign-in-button {
 span.password-error-message {
     padding-left: 9px;
     color: red;
-    margin-top:5px;
+    margin-top:25px;
     float:left;
     width:100%;
     display:none;
+}
+
+.login-error-message {
+    margin-bottom: 25px;
 }
 
 .register-button {
@@ -159,10 +165,10 @@ span.password-error-message {
 }
 
 .snake-drawing2 {
-    top: 4px;
-width: 365px;
+  top: 109px;
+width: 600px;
 position: absolute;
-    left: -103%;
+left: 40%;
 }
 
 .disco-josh {
@@ -178,6 +184,7 @@ margin-bottom: 110px;
 
 .jumbotron {
     height:auto;
+    margin-bottom:0px;
 }
 
 
@@ -260,4 +267,28 @@ padding-right: 0px;
 
 .pt_extension_installed {
     display:none;
+}
+
+.register-explain {
+width: 90%;
+margin-top: 65px;
+}
+
+.register-container {
+}
+
+.white-text {
+    position:absolute;
+}
+
+.register-loading {
+    position: absolute;
+left: 27.4%;
+top: 463px;
+}
+
+.register-explain-p {
+    font-size: 18px;
+margin-bottom: 60px;
+margin-top: 35px;
 }
