--- a/truespeak/templates/about.html
+++ b/truespeak/templates/about.html
@@ -75,7 +75,7 @@
                 ParselTongue may have bugs and could definitely be more polished and thoroughly tested.
             </p>
             <p>
-                We would like to add a feature to allow power users to manually enter a private key into the extension. Currently
+                We would also like to add a feature to allow power users to manually enter a private key into the extension. Currently
                 we store a password encrypted version of your private key on our servers to allow users to install the extension
                 on multiple machines. This provides a level of security up to the strength of the user's password, but for users
                 who demand an even stronger security guarantee we would like to allow them to install and store their private
@@ -83,7 +83,7 @@
             </p>
 
 
-            <h3> How does ParselTongue Really Work? </h3>
+            <h3> How does ParselTongue really work? </h3>
             <p>
                 The underlying cryptography is from a Javascript cryptography library https://github.com/wwwtyro/cryptico
             </p>
