--- a/truespeak/templates/welcome.html
+++ b/truespeak/templates/welcome.html
@@ -9,7 +9,7 @@
            {% comment %}
             <img class="sound-of-music upside-down" src="https://d2nh4f9cbhlobh.cloudfront.net/_uploads/galleries/240/the-sound-of-music-image_2.jpg"/>
             {% endcomment %}
-            <div class="over-sound-of-music">
+            <div class="over-sound-of-music white-text">
                 <h1 class="sound-of-music-header welcome-header">You should receive a confirmation email in a few seconds.</h1>
                 <h1 class="sound-of-music-header welcome-email-address welcome-header">{{ email_address }}</h1>
             </div>
