--- a/truespeak/templates/login.html
+++ b/truespeak/templates/login.html
@@ -24,8 +24,8 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control register-input login_password" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                    <span class="password-error-message login_error"> Oops, email/password not found. Try again? </span>
                     <button type="submit" class="btn btn-lg btn-primary register-button login_button">Submit</button>
+                    <span class="password-error-message login_error login-error-message"> Oops, email/password not found. Try again? </span>
                     <div class="loading-gif">
                         <img src="/static/flakes.gif"/>
                     </div>
