--- a/truespeak/static/truespeak.css
+++ b/truespeak/static/truespeak.css
@@ -293,3 +293,30 @@ top: 463px;
 margin-bottom: 60px;
 margin-top: 35px;
 }
+
+.tutorial-wrapper p {
+    font-size:20px;
+    margin-top:30px;
+}
+.tutorial-wrapper h3 {
+    margin-top:50px;
+    font-size:36px;
+}
+.tutorial-wrapper {
+    max-width:1100px;
+    padding-left: 10%;
+    padding-right: 12%;
+    padding-bottom: 70px;
+}
+
+.tutorial-wrapper h3.super-duper-header {
+    font-size:54px;
+}
+
+.screenshot-image {
+    width:600px;
+    /*margin-left:6%;*/
+    margin-top: 30px;
+    border:1px solid lightgray;
+    margin-bottom: 10px;
+}
