--- a/truespeak/templates/about.html
+++ b/truespeak/templates/about.html
@@ -14,16 +14,15 @@
                 Second you have to register the gmail address that you would like to use with ParselTongue. You can register <a href="https://chrome.google.com/webstore/detail/parseltongue/logcpfjpklbbdbchkhjnpnnflbcmgnaj?hl=EN" target="_blank">here</a>.
             </p>
             <p>
-                That's all it takes to set it up. When you compose an email to another ParselTongue user you will now see a snake icon in the bottom
-                right hand corner of the email. If you click this snake, ParselTongue will encrypt your email so that only your intended recipient can read it.
+                That's all it takes to set it up. Below is a screenshot tutorial showing what ParselTongue looks like once it's setup.
             </p>
+
+            {% include 'tutorial_snippet.html' %}
+
             <p>
-                You can add additional email addresses to your ParselTongue account from your settings page, accessible by clicking the snake that appears in the top
-                right corner of your browser. From this popup you can also set ParselTongue to encrypt your emails by default (rather than having to click on the snake to encrypt).
-            </p>
-            <p>
-                Your email experience with non ParselTongue users will be exactly the same as before. Although you may feel a little more aware of the fact
-                that without ParselTongue encryption you are not necessarily the only one's in the conversation.
+                The rest of your internet and email experience will be unaffected &mdash; although you may find yourself
+                more aware of the fact that without ParselTongue you and your message recipients are not necessarily
+                the only one's in the conversation.
             </p>
 
             <h3> How does ParselTongue Work? </h3>
@@ -85,7 +84,7 @@
 
             <h3> How does ParselTongue really work? </h3>
             <p>
-                The underlying cryptography is from a Javascript cryptography library https://github.com/wwwtyro/cryptico
+                The underlying cryptography is from a Javascript library called <a href="https://github.com/wwwtyro/cryptico">cryptico</a>.
             </p>
              <p>
 
