--- a/truespeak/templates/tutorial.html
+++ b/truespeak/templates/tutorial.html
@@ -18,42 +18,12 @@
 
                 <h3> Congratulations on installing ParselTongue, you should see a small new friend.</h3>
 
-                <img class="screenshot-image" src="http://i.imgur.com/iEilsDO.jpg"/>
-                <p>
-                    Click on this snake to log in and out of ParselTongue, modify your settings,
-                    or go back to the about page.
-                </p>
+                {% include 'tutorial_snippet.html' %}
 
-                <img class="screenshot-image" src="http://i.imgur.com/tDigw8d.png"/>
-
-                <h3> ParselTongue works on top of gmail.</h3>
-
-                <p> Your gmail will look exactly the same as it did before, except for
-                one new button that appears when you write emails to other ParselTongue users.
-                </p>
-                <img class="screenshot-image" src="http://i.imgur.com/oD9latr.jpg"/>
-                <p>
-                   This snake appears when ParselTongue recognizes that you are sending an
-                    email to another ParselTongue user.
-                </p>
-                <p>
-                    If you click the snake, ParselTongue will encrypt your email, and a lock
-                    will appear where the snake was. Although the email will look the same to you,
-                    whenever the lock is visible this tells you that your email is encrypted,
-                    and only you and your email's recipients will be able to read it.
-                </p>
-                 <img class="screenshot-image" src="http://i.imgur.com/pEMhIWG.jpg"/>
 
                 <p>
-                    If you click the lock again, it will unencrypt your message so you can send an email as plain text.
+                <a href="http://mail.google.com">Login to gmail</a> to try it out for yourself. </p>
                 </p>
-                <p> From the ParselTongue extension popup you can set whether you would like
-                emails to other ParselTongue users to be encrypted by default, or if you want to
-                explicitly click the snake on each email you want to encrypt.</p>
-
-                <img class="screenshot-image" src="http://i.imgur.com/V110BWG.jpg/">
-
-                <p> That's it. <a href="http://mail.google.com">Login to gmail</a> to try it out for yourself. </p>
 
                 <p style="margin-top:50px;"> ParselTongue is brand new and may still have bugs. If you discover a bug or have any questions
                     please send an email to <a href="mailto:parseltongueextension@gmail.com">parseltongueextension@gmail.com</a></p>
