--- a/truespeak/templates/about.html
+++ b/truespeak/templates/about.html
@@ -20,7 +20,7 @@
             {% include 'tutorial_snippet.html' %}
 
             <p>
-                The rest of your internet and email experience will be unaffected &mdash; although you may find yourself
+                That's it. The rest of your internet and email experience will be unaffected &mdash; although you may find yourself
                 more aware of the fact that without ParselTongue you and your message recipients are not necessarily
                 the only one's in the conversation.
             </p>
@@ -84,6 +84,7 @@
 
             <h3> How does ParselTongue really work? </h3>
             <p>
+                You can check out the code that is running your extension in our <a href="https://github.com/joshblum/fakeblock">repot</a>.
                 The underlying cryptography is from a Javascript library called <a href="https://github.com/wwwtyro/cryptico">cryptico</a>.
             </p>
              <p>
