--- a/truespeak/templates/tutorial.html
+++ b/truespeak/templates/tutorial.html
@@ -22,7 +22,7 @@
 
 
                 <p>
-                <a href="http://mail.google.com">Login to gmail</a> to try it out for yourself. </p>
+                That's it. To try it out for yourself <a href="http://mail.google.com">login to gmail</a>.
                 </p>
 
                 <p style="margin-top:50px;"> ParselTongue is brand new and may still have bugs. If you discover a bug or have any questions
