--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -56,6 +56,8 @@
 
         <hr>
 
+        <h3> What does it look like? </h3>
+
         <div class="tutorial-wrapper" style="padding-left:0px;padding-bottom:0px;">
 
             {% include 'tutorial_snippet.html' %}
