--- a/truespeak/templates/contact.html
+++ b/truespeak/templates/contact.html
@@ -3,7 +3,7 @@
 {% block body %}
 
     <div class="container">
-        <p style="font-size:20px;padding-left:30%">parseltongueextension at gmail dot com</p>
+        <p style="font-size:20px;padding-left:30%"><a href="mailto:parseltongueextension@gmail.com">parseltongueextension@gmail.com</a></p>
         <img class="disco-josh" src="http://web.mit.edu/swang93/www/disco-josh.gif"/>
     </div>
 
