--- a/truespeak/templates/about.html
+++ b/truespeak/templates/about.html
@@ -8,10 +8,10 @@
         <div class="container about-wrapper">
             <h3> How do I use ParselTongue? </h3>
             <p>
-                First you have to install the ParselTongue google chrome extension. You can get it <a href="https://chrome.google.com/webstore/detail/parseltongue/logcpfjpklbbdbchkhjnpnnflbcmgnaj?hl=EN" target="_blank">here</a>.
+                First you have to install the ParselTongue google chrome extension. You can get it <a href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">here</a>.
             </p>
             <p>
-                Second you have to register the gmail address that you would like to use with ParselTongue. You can register <a href="https://chrome.google.com/webstore/detail/parseltongue/logcpfjpklbbdbchkhjnpnnflbcmgnaj?hl=EN" target="_blank">here</a>.
+                Second you have to register the gmail address that you would like to use with ParselTongue. You can register <a href="/register/" target="_blank">here</a>.
             </p>
             <p>
                 That's all it takes to set it up. Below is a screenshot tutorial showing what ParselTongue looks like once it's setup.
