--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -26,7 +26,7 @@
                 Client-side encrypted communication for gmail.
             </p>
 
-            <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/logcpfjpklbbdbchkhjnpnnflbcmgnaj?hl=EN" target="_blank">Get it for Chrome </a> <img src="http://netflix.burtonthird.com/static/img/chrome-logo.png" class="chrome-icon"/>
+            <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get it for Chrome </a> <img src="http://netflix.burtonthird.com/static/img/chrome-logo.png" class="chrome-icon"/>
 
             <img class="snake-img" src="http://fc06.deviantart.net/fs70/i/2012/329/3/f/black_and_white_snake_by_evilpurplechicken-d5m6g7f.jpg"/>
 
@@ -63,7 +63,7 @@
             {% include 'tutorial_snippet.html' %}
 
             <p>
-                It's simple, and it's free. <a href="https://chrome.google.com/webstore/detail/parseltongue/logcpfjpklbbdbchkhjnpnnflbcmgnaj?hl=EN" target="_blank">Get it for chrome</a>.
+                It's simple, and it's free. <a href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get it for chrome</a>.
             </p>
 
         </div>
