--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -9,22 +9,25 @@
     <div class="container-narrow">
 
         <div class="masthead muted">
-            <h3>
+            <h3 style="text-align:left;">
                 Secure your email from eavesdroppers.
             </h3>
         </div>
 
         <hr>
 
-        <div class="jumbotron">
+        <div class="jumbotron" style="padding-top:15px;">
+            <div class="left-side">
             <h1 class="pull-left">
                 ParselTongue
             </h1>
-            <img src="http://icons.iconarchive.com/icons/martin-berube/animal/256/snake-icon.png" class="snake-icon">
-
-            <p class="lead def-text">
-                Client-side encrypted communication for gmail.
+                  <p class="lead def-text" style="text-align:left;">
+                The client-side encryption extension for Gmail.
             </p>
+            </div>
+            <div class="image-wrapper">
+                <img src="http://icons.iconarchive.com/icons/martin-berube/animal/256/snake-icon.png" class="snake-icon">
+            </div>
 
             <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get it for Chrome </a> <img src="http://netflix.burtonthird.com/static/img/chrome-logo.png" class="chrome-icon"/>
 
