--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -9,7 +9,7 @@
     <div class="container-narrow">
 
         <div class="masthead muted">
-            <h3 style="text-align:left;">
+            <h3 style="text-align:left;margin-left:110px;">
                 Secure your email from eavesdroppers.
             </h3>
         </div>
