--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -73,5 +73,5 @@
 
     </div>
 
-    <img class="crazy-snake" src="http://31.media.tumblr.com/eca927ed58e655bd139fa9f269724a03/tumblr_mf09rsPUOg1r1mkubo1_500.gif"/>
+    <!-- <img class="crazy-snake" src="http://31.media.tumblr.com/eca927ed58e655bd139fa9f269724a03/tumblr_mf09rsPUOg1r1mkubo1_500.gif"/> -->
 {% endblock %}
