--- a/truespeak/templates/about.html
+++ b/truespeak/templates/about.html
@@ -3,9 +3,9 @@
 
 {% block body %}
 
-    <div class="about">
+    <div class="about container-narrow">
 
-        <div class="container about-wrapper">
+        <div class="jumbotron about-wrapper">
             <h3> How do I use ParselTongue? </h3>
             <p>
                 First you have to install the ParselTongue google chrome extension. You can get it <a href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">here</a>.
@@ -84,7 +84,7 @@
 
             <h3> How does ParselTongue really work? </h3>
             <p>
-                You can check out the code that is running your extension in our <a href="https://github.com/joshblum/fakeblock">repot</a>.
+                You can check out the code that is running your extension in our <a href="https://github.com/joshblum/fakeblock">repository</a>.
                 The underlying cryptography is from a Javascript library called <a href="https://github.com/wwwtyro/cryptico">cryptico</a>.
             </p>
              <p>
