--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -8,10 +8,10 @@
     <link rel="shortcut icon" href="/static/favicon.ico">
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/truespeak.css" rel="stylesheet">
+    <link href="/static/base.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <script src="/static/truespeak.js"></script>
+    <script src="/static/base.js"></script>
 
     {% block css %}
     {% endblock %}
