--- a/truespeak/static/base.css
+++ b/truespeak/static/base.css
@@ -1,3 +1,29 @@
+/* Main marketing message and sign up button */
+.jumbotron {
+    margin: 0px 0;
+    text-align: center;
+}
+
+.jumbotron h1 {
+    font-size: 72px;
+    line-height: 1;
+}
+
+.jumbotron .btn {
+    font-size: 21px;
+    padding: 14px 24px;
+}
+
+/* Custom container */
+.container-narrow {
+    margin: 0 auto;
+    max-width: 700px;
+}
+
+.container-narrow > hr {
+    margin: 30px 0;
+}
+
 
 .navbar {
 }
@@ -253,18 +279,18 @@ padding-right: 0px;
     margin-top:-15px;
 }
 
+.about-wrapper {
+    padding-bottom:70px;
+    text-align: left;
+}
+
 .about-wrapper p {
-    font-size:20px;
-    width:75%;
+    font-size:14pt;
     margin-top:30px;
 }
+
 .about-wrapper h3 {
-    margin-top:50px;
     font-size:36px;
-}
-.about-wrapper {
-    padding-left:10%;
-    padding-bottom:70px;
 }
 
 .pt_extension_installed {
@@ -272,8 +298,8 @@ padding-right: 0px;
 }
 
 .register-explain {
-width: 90%;
-margin-top: 65px;
+    width: 90%;
+    margin-top: 65px;
 }
 
 .register-container {
@@ -285,14 +311,14 @@ margin-top: 65px;
 
 .register-loading {
     position: absolute;
-left: 27.4%;
-top: 463px;
+    left: 27.4%;
+    top: 463px;
 }
 
 .register-explain-p {
     font-size: 18px;
-margin-bottom: 60px;
-margin-top: 35px;
+    margin-bottom: 60px;
+    margin-top: 35px;
 }
 
 .tutorial-wrapper p {
