--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="shortcut icon" href="/static/favicon.ico">
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
@@ -29,8 +29,9 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-3539301-15', 'herokuapp.com');
+        ga('create', 'UA-47467080-1', 'getparseltongue.com');
         ga('send', 'pageview');
+
     </script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -58,7 +59,7 @@
             <ul class="nav navbar-nav">
                 <li  {% if request.path == "/about/" %}class="active"{% endif %}><a href="/about/">About</a></li>
                 <li  {% if request.path == "/contact/" %}class="active"{% endif %}><a href="/contact/">Contact</a></li>
-                            {% if not user.is_authenticated %}
+                {% if not user.is_authenticated %}
                     <li class="{% if request.path == "/register/" %}active{% endif %} pt_extension_installed" style="display:none;"><a href="/register/">Register</a></li>
                 {% else %}
                     <li {% if request.path == "/settings/" %}class="active"{% endif %}><a href="/settings/">Settings</a></li>
