--- a/truespeak/static/truespeak.css
+++ b/truespeak/static/truespeak.css
@@ -155,7 +155,7 @@ span.password-error-message {
     width: 100px;
     height: 100px;
     max-margin-left: 156px;
-    margin-left:20%;
+    margin-left:288px;
     margin-top: 22px;
     display:none;
 }
